# megaParser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
_deploy/: putfile.py  remote.py  upload.py
app/: crypto.py  log.py  main.py  settings.py
app/bot/: bot.py  handlers.py
app/cli/: importer.py  manage.py  proxy_pool.py
app/core/: account_manager.py  client_factory.py  errors.py  rate_limiter.py  session_loader.py
app/db/: base.py  models.py  repo.py
app/services/: discovery.py  monitor.py  parser_members.py  parser_messages.py  runner.py
migrations/: env.py
migrations/versions/: 0001_initial.py
